SUBDIRS = base graphics imaging lmfit oscpack audio video player conradrelais parport \
        anim wrapper python test utils samples

EXTRA_DIST = avgrc avgconfigwrapper.h api.h avgconfig_win.h \
        $(wildcard glm/*.hpp) $(wildcard glm/core/*.hpp) $(wildcard glm/core/*.inl) \
        $(wildcard glm/gtc/*.hpp) $(wildcard glm/gtc/*.inl) \
        $(wildcard glm/gtx/*.hpp) $(wildcard glm/gtx/*.inl) \
        $(wildcard glm/virtrev/*.hpp)
